--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,13 +3,43 @@
 <head>
 <meta charset="UTF-8">
 <title>E-Commerce</title>
+<link rel="stylesheet" th:href="@{/css/header.css}">
+<link rel="stylesheet" th:href="@{/css/slider.css}">
+<script type="text/javascript" th:src="@{/js/slider.js}"></script>
 </head>
 <body>
 <div th:replace="@{/header}::header"></div>
-Home Page
-<!-- <div th:if="session.userLoginData!=null">
-<p th:text="${session.userLoginData.userEmail}"></p>
+<!-- Slideshow container -->
+<div class="slideshow-container">
 
-</div> -->
+  <!-- Full-width images with number and caption text -->
+  			<div class="mySlides fade" style="display:block" >
+    			<img th:src="@{/images/slider-1.jpg}" style="width:100%">
+    			<div class="text">Watch</div>
+  			</div>
+
+ 			<div class="mySlides fade">
+    			<img th:src="@{/images/slider-2.jpg}" style="width:100%">
+    			<div class="text">jeans</div>
+ 			 </div>
+
+  			<div class="mySlides fade">
+    				<img th:src="@{/images/slider-3.jpg}" style="width:100%">
+  				  <div class="text">Laptop</div>
+  			</div>
+
+  <!-- Next and previous buttons -->
+ 			 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+ 			 <a class="next" onclick="plusSlides(1)">&#10095;</a>
+			</div>
+	<br>
+
+<!-- The dots/circles -->
+	<!-- <div style="text-align:center">
+  		<span class="dot" onclick="currentSlide(1)"></span>
+  		<span class="dot" onclick="currentSlide(2)"></span>
+ 	 	<span class="dot" onclick="currentSlide(3)"></span>
+	</div> -->
+
 </body>
 </html>
