--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;600&family=Poppins:wght@400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 
 *{
 	margin:0px;
@@ -16,29 +16,49 @@
 
     --border-clr: #eaeaea;
 
-    --shadow: 0 0 10px rgba(0,0,0,0.3);
+    --shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;;
 }
-
 a{
 	color: var(--primary-color);
 	font-weight: 500;
 	text-decoration: none;
 }
-
 ul{
 	list-style-type: none;
 }
+
 /* buttons */
 .btn{
-	padding: 3px 10px;
+	height: 40px;
+	width: max-content;
+	padding: 0 10px;
 	border-radius: 5px;
 	border: 1px solid var(--primary-color);
 	background: var(--primary-color);
 	color: white;
 	cursor: pointer;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-weight: 400 !important;
+	font-size: 15px;
 }
 .btn:hover{
 	border: 1px solid var(--primary-color);
 	color: var(--primary-color);
 	background: white;
+}
+.btn-second{
+	border: 0;
+	padding: 5px 10px;
+	border-radius: 5px;
+	margin-top: 20px;
+	cursor: pointer;
+	color: blue;
+}
+table{
+	text-align: center;
+}
+th,td{
+	border-bottom: 1px solid var(--border-clr);
 }
