--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -56,9 +56,42 @@ ul{
 	cursor: pointer;
 	color: blue;
 }
+.btn-sm{
+	border: 0;
+	outline: 0;
+	height: 30px;
+	width: 30px;
+	border-radius: 5px;
+	color: var(--primary-color);
+	cursor: pointer;
+}
+
+.danger{
+	color: red;
+}
+
 table{
 	text-align: center;
 }
 th,td{
 	border-bottom: 1px solid var(--border-clr);
+}
+th{
+	background: var(--primary-color);
+	color: white;
+	padding: 10px 0;
+}
+
+.accepted{
+	background: lightgreen;;
+	color: white;
+}
+.pending{
+	background: orange;
+	color: white;
+}
+.rejected,
+.cancelled{
+	background: red;
+	color: white;
 }
