--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -33,7 +33,7 @@
  			 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 			</div>
 	<br>
-
+<div th:replace="@{/footer}::footer"></div>
 <!-- The dots/circles -->
 	<!-- <div style="text-align:center">
   		<span class="dot" onclick="currentSlide(1)"></span>
